@@ -1,4 +1,4 @@
 DIST PokerTH-0.5-src.tar.bz2 4123606 RMD160 d322aecd9c44d301bb3c3ba3fc7c33bf6a6114db SHA1 344a1afcef123d4947e39e667fb310160a985958 SHA256 a521aa9f4e47741c132ce5023b07e594ee267d1b3d99fa9b5e0d78b39502239d
-EBUILD pokerth-0.5.ebuild 1517 RMD160 921593fc4823ee90affb390baa23aebc1979723a SHA1 c2c97ae9a4ec35f4946389890f1f9ede8e7cb3d0 SHA256 1125f9be5d398f60d45b5d26fb2429fc63360ead957cc5aa70f6f48657921079
-MISC ChangeLog 444 RMD160 2d607bab4186abe9008fb2e01f3b7bfb1c56d687 SHA1 84b0189774e1740fdd37f88e1c75925a157d6fe7 SHA256 e1ffa5fef086d3e0a381c2ed39ad4a9e5217aa69eacda4f5862a722810cc3f6e
+EBUILD pokerth-0.5.ebuild 1433 RMD160 908a6e52df79655eb230ecf57872eff05a605774 SHA1 6943b4db9f87f9f5d722d46aa95920fe2b683d1d SHA256 5d31d3fc8ec0939520ac5c4e99e36b3206218037c987593a947baba1957c6c39
+MISC ChangeLog 539 RMD160 4d39a574d4d7aee6d240cf15457ebfd91f932764 SHA1 f16c10504ecbd5a80653831b37556c2de26aaf86 SHA256 2716f509309ebbd3aa01aaed1360eb442711f613092c0df938b72d743824e620
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
