@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Sep 2007; Jakub Moc <jakub@gentoo.org> pokerth-0.5.ebuild:
+  Use eqmake4, ebuild cleanup
+
   24 Sep 2007; Thomas Pani (thpani) <thomas.pani@gmail.com>
   pokerth-0.5.ebuild:
   Added media-libs/libmikmod dependency. Thanks to Tobias Kral <tobias@kral.ws>.
